chore: manually install @babel/plugin-transform-react-jsx

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "vitest": "^0.25.3"
   },
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.20.7",
     "@fontsource/ibm-plex-mono": "^4.5.10",
     "@nanostores/preact": "^0.1.3",
     "@types/canvas-confetti": "^1.6.0",
