--- a/netlify.toml
+++ b/netlify.toml
@@ -55,6 +55,14 @@
     to = "/:lang/guides/deploy/edgio"
 
   [[redirects]]
+    from = "/:lang/migration/0.21.0"
+    to = "/:lang/upgrade-astro"
+
+  [[redirects]]
+    from = "/:lang/migrate"
+    to = "/:lang/upgrade-astro"
+
+  [[redirects]]
     from = "/:lang/*"
     to = "/:lang/404/"
     status = 404
