--- a/netlify.toml
+++ b/netlify.toml
@@ -35,6 +35,14 @@
     to = "/:lang/concepts/islands"
 
   [[redirects]]
+    from = "/:lang/comparing-astro-vs-other-tools"
+    to = "/:lang/guides/migrate-to-astro"
+
+  [[redirects]]
+    from = "/lighthouse/*"
+    to = "/en/guides/migrate-to-astro"
+
+  [[redirects]]
     from = "/:lang/guides/publish-to-npm"
     to = "/:lang/reference/publish-to-npm"
 
