--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,18 @@ env:
   NODE_OPTIONS: "--max_old_space_size=4096"
 
 jobs:
+  astrocheck:
+    name: Check for type issues with astro check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install Tools & Dependencies
+        uses: ./.github/actions/install
+
+      - name: Run Check
+        run: pnpm run check
   eslint:
     name: Check for code issues with ESLint
     runs-on: ubuntu-latest
@@ -62,4 +74,4 @@ jobs:
         uses: ./.github/actions/install
 
       - name: Run Check
-        run: pnpm run test    
+        run: pnpm run test
