ci(check): Enable colors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
   astrocheck:
     name: Check for type issues with astro check
     runs-on: ubuntu-latest
+    env:
+      FORCE_COLOR: true
     steps:
       - name: Checkout
         uses: actions/checkout@v3
