--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,13 @@
 {
+  "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "allowJs": true,
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "strict": true,
     "baseUrl": ".",
-    "moduleResolution": "node",
-    "module": "ES2020",
-    "target": "ES2020",
     "paths": {
       "~/*": ["src/*"]
     },
-    "outDir": "./dist",
-    "declarationDir": "./dist/types",
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
   }
