update netlify.toml so all old migration content links to v2 guide

--- a/netlify.toml
+++ b/netlify.toml
@@ -64,11 +64,11 @@
 
   [[redirects]]
     from = "/:lang/migration/0.21.0"
-    to = "/:lang/upgrade-astro"
+    to = "/:lang/guides/upgrade-to/v2"
 
   [[redirects]]
     from = "/:lang/migrate"
-    to = "/:lang/upgrade-astro"
+    to = "/:lang/guides/upgrade-to/v2"
 
   [[redirects]]
     from = "/:lang/*"
