Enable ESLint for tsx files

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:linkcheck": "SKIP_OG=true pnpm build && tsm --require=./scripts/lib/filter-warnings.cjs ./scripts/lint-linkcheck.ts",
     "lint:linkcheck:nobuild": "tsm --require=./scripts/lib/filter-warnings.cjs ./scripts/lint-linkcheck.ts",
     "lint:slugcheck": "node ./scripts/lint-slugcheck.mjs",
-    "lint:eslint": "eslint . --ext .js,.ts,.astro",
+    "lint:eslint": "eslint .",
     "github:translation-status": "node ./scripts/github-translation-status.mjs"
   },
   "devDependencies": {
@@ -53,6 +53,7 @@
     "domhandler": "^4.3.1",
     "eslint": "^8.29.0",
     "eslint-plugin-astro": "^0.21.0",
+    "eslint-plugin-react": "^7.32.1",
     "fast-glob": "^3.2.11",
     "gray-matter": "^4.0.3",
     "hast-util-from-html": "^1.0.0",
