[upgrade guide] [i18nIgnore] Add upgrade to v2 guide + moving pieces (#2330)
Co-authored-by: Tom Lienard <tom.lienrd@gmail.com>
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>
Co-authored-by: Kevin Zuniga Cuellar <46791833+kevinzunigacuellar@users.noreply.github.com>

--- a/netlify.toml
+++ b/netlify.toml
@@ -63,6 +63,14 @@
     to = "/:lang/guides/deploy/edgio"
 
   [[redirects]]
+    from = "/:lang/migration/0.21.0"
+    to = "/:lang/guides/upgrade-to/v1"
+
+  [[redirects]]
+    from = "/:lang/migrate"
+    to = "/:lang/guides/upgrade-to/v1"
+
+  [[redirects]]
     from = "/:lang/*"
     to = "/:lang/404/"
     status = 404
