--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@11ty/eleventy-fetch": "^3.0.0",
     "@actions/core": "^1.9.0",
     "@algolia/client-search": "^4.14.2",
-    "@astrojs/mdx": "1.0.0-beta.2",
-    "@astrojs/preact": "^1.2.0",
+    "@astrojs/mdx": "0.15.0",
+    "@astrojs/preact": "^2.0.0",
     "@astrojs/sitemap": "1.0.0",
     "@babel/core": "^7.18.10",
     "@docsearch/css": "^3.2.2",
@@ -44,10 +44,10 @@
     "@types/node": "^18.6.4",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
-    "astro": "2.0.0-beta.4",
-    "astro-auto-import": "^0.2.0",
+    "astro": "2.0.1",
+    "astro-auto-import": "^0.2.1",
     "astro-eslint-parser": "^0.9.2",
-    "astro-og-canvas": "^0.1.5",
+    "astro-og-canvas": "^0.1.6",
     "bcp-47-normalize": "^2.1.0",
     "canvaskit-wasm": "^0.37.0",
     "chroma-js": "^2.4.2",
