--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@types/node": "^18.6.4",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
-    "astro": "2.0.1",
+    "astro": "^2.0.2",
     "astro-auto-import": "^0.2.1",
     "astro-eslint-parser": "^0.9.2",
     "astro-og-canvas": "^0.1.6",
@@ -93,7 +93,6 @@
   "dependencies": {
     "@fontsource/ibm-plex-mono": "^4.5.10",
     "@nanostores/preact": "^0.1.3",
-    "@types/canvas-confetti": "^1.6.0",
     "canvas-confetti": "^1.6.0",
     "jsdoc-api": "^7.1.1",
     "nanostores": "^0.5.13",
