--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "vitest",
     "preview": "astro preview",
     "check": "astro check",
+    "tsc": "tsc",
     "format": "pnpm run format:code",
     "format:ci": "pnpm run format:imports && pnpm run format:code",
     "format:code": "prettier -w . --cache --plugin-search-dir=.",
@@ -37,6 +38,7 @@
     "@docsearch/css": "^3.2.2",
     "@docsearch/react": "^3.2.0",
     "@types/chroma-js": "^2.1.4",
+    "@types/hast": "^2.3.4",
     "@types/html-escaper": "^3.0.0",
     "@types/mdast": "^3.0.10",
     "@types/node": "^18.6.4",
@@ -64,6 +66,7 @@
     "kleur": "^4.1.5",
     "mdast-util-from-markdown": "^1.2.0",
     "mdast-util-to-hast": "^12.2.4",
+    "mdast-util-to-string": "^3.1.1",
     "micromark-util-character": "^1.1.0",
     "micromark-util-symbol": "^1.0.1",
     "node-fetch": "^3.2.10",
