--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@11ty/eleventy-fetch": "^3.0.0",
     "@actions/core": "^1.9.0",
     "@algolia/client-search": "^4.14.2",
-    "@astrojs/mdx": "0.15.0",
+    "@astrojs/mdx": "^0.16.0",
     "@astrojs/preact": "^2.0.0",
     "@astrojs/sitemap": "1.0.0",
     "@babel/core": "^7.18.10",
@@ -44,7 +44,7 @@
     "@types/node": "^18.6.4",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
-    "astro": "^2.0.2",
+    "astro": "^2.0.5",
     "astro-auto-import": "^0.2.1",
     "astro-eslint-parser": "^0.9.2",
     "astro-og-canvas": "^0.1.6",
