Add back canvas-confetti types

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/core": "^7.18.10",
     "@docsearch/css": "^3.2.2",
     "@docsearch/react": "^3.2.0",
+    "@types/canvas-confetti": "^1.6.0",
     "@types/chroma-js": "^2.1.4",
     "@types/hast": "^2.3.4",
     "@types/html-escaper": "^3.0.0",
