Refer to `src/content/docs` instead of `src/pages` in scripts etc.

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -4,4 +4,4 @@
 - .github/workflows/**
 
 i18n:
-- any: ['src/pages/**/*.mdx', '!src/pages/en/**/*']
+- any: ['src/content/docs/**/*.mdx', '!src/content/docs/en/**/*']
