Generate content collection types before running `tsc`

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "vitest",
     "preview": "astro preview",
     "check": "astro check",
-    "tsc": "tsc",
+    "tsc": "astro sync && tsc",
     "format": "pnpm run format:code",
     "format:ci": "pnpm run format:imports && pnpm run format:code",
     "format:code": "prettier -w . --cache --plugin-search-dir=.",
