Revert "wip: remove allowJs from tsconfig (something borking with content?)"
This reverts commit bb99ae0a8afcf05d70ce57bf16ea034c2c92b9f5.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "baseUrl": ".",
