Add dependencies for `pnpm run add-language`
Related with [this](https://github.com/withastro/docs/blob/main/TRANSLATING.md#scaffold-files-for-a-new-language)

--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "@astrojs/preact": "^1.2.0",
     "@astrojs/sitemap": "1.0.0",
     "@babel/core": "^7.18.10",
+    "@babel/generator": "^7.20.14",
+    "@babel/parser": "^7.20.15",
+    "@babel/traverse": "^7.20.13",
+    "@babel/types": "^7.20.7",
     "@docsearch/css": "^3.2.2",
     "@docsearch/react": "^3.2.0",
     "@types/chroma-js": "^2.1.4",
