Add migration guide redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -35,6 +35,10 @@
     to = "/:lang/concepts/islands"
 
   [[redirects]]
+    from = "/comparing-astro-vs-other-tools"
+    to = "/en/guides/migrate-to-astro"
+
+  [[redirects]]
     from = "/:lang/comparing-astro-vs-other-tools"
     to = "/:lang/guides/migrate-to-astro"
 
