--- a/netlify.toml
+++ b/netlify.toml
@@ -33,6 +33,14 @@
   [[redirects]]
     from = "/:lang/core-concepts/partial-hydration"
     to = "/:lang/concepts/islands"
+  
+  [[redirects]]
+    from = "/core-concepts/collections"
+    to = "/en/guides/content-collections"
+  
+  [[redirects]]
+    from = "/:lang/core-concepts/collections"
+    to = "/:lang/guides/content-collections"
 
   [[redirects]]
     from = "/comparing-astro-vs-other-tools"
