Add redirects based on 404 audit (#2669)

--- a/netlify.toml
+++ b/netlify.toml
@@ -33,6 +33,18 @@
   [[redirects]]
     from = "/:lang/core-concepts/partial-hydration"
     to = "/:lang/concepts/islands"
+  
+  [[redirects]]
+    from = "/core-concepts/collections"
+    to = "/en/guides/content-collections"
+  
+  [[redirects]]
+    from = "/:lang/core-concepts/collections"
+    to = "/:lang/guides/content-collections"
+
+  [[redirects]]
+    from = "/comparing-astro-vs-other-tools"
+    to = "/en/guides/migrate-to-astro"
 
   [[redirects]]
     from = "/:lang/comparing-astro-vs-other-tools"
