--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "vitest": "^0.28.5"
   },
   "dependencies": {
+    "@feedback-fish/react": "^1.2.1",
     "@fontsource/ibm-plex-mono": "^4.5.10",
     "@nanostores/preact": "^0.1.3",
     "canvas-confetti": "^1.6.0",
