Convert translation status output to HTML

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lint:linkcheck:nobuild": "tsm --require=./scripts/lib/filter-warnings.cjs ./scripts/lint-linkcheck.ts",
     "lint:slugcheck": "node ./scripts/lint-slugcheck.mjs",
     "lint:eslint": "eslint .",
-    "github:translation-status": "node ./scripts/github-translation-status.mjs"
+    "netlify:build": "pnpm ${NETLIFY_BUILD_SCRIPT:-build}",
+    "translation-status": "tsm --require=./scripts/lib/filter-warnings.cjs ./scripts/translation-status.ts"
   },
   "devDependencies": {
     "@11ty/eleventy-fetch": "^3.0.0",
