--- a/package.json
+++ b/package.json
@@ -115,6 +115,9 @@
         "react-dom",
         "vite"
       ]
+    },
+    "patchedDependencies": {
+      "astro@2.0.17": "patches/astro@2.0.17.patch"
     }
   }
 }
