Patch `astro-og-image` to call `surface.dispose()`

--- a/package.json
+++ b/package.json
@@ -115,6 +115,9 @@
         "react-dom",
         "vite"
       ]
+    },
+    "patchedDependencies": {
+      "astro-og-canvas@0.1.6": "patches/astro-og-canvas@0.1.6.patch"
     }
   }
 }
