--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "htmlparser2": "^7.2.0",
     "kleur": "^4.1.5",
     "mdast-util-from-markdown": "^1.2.0",
+    "mdast-util-mdx-jsx": "^2.1.2",
     "mdast-util-to-hast": "^12.2.4",
     "mdast-util-to-string": "^3.1.1",
     "micromark-util-character": "^1.1.0",
