--- a/.github/workflows/discord-i18n-ping.yml
+++ b/.github/workflows/discord-i18n-ping.yml
@@ -25,7 +25,7 @@ jobs:
           COMMIT_AUTHOR: ${{ github.event.commits[0].author.name }}
           COMMIT_MESSAGE: ${{ github.event.commits[0].message }}
           COMMIT_ID: ${{ github.event.commits[0].id }}
-        run: node ./scripts/tuesday-bot.mjs
+        run: pnpm tsm --require=./scripts/lib/filter-warnings.cjs ./scripts/tuesday-bot.ts
       
       - name: Send a Discord notification
         env:
