--- a/.github/workflows/discord-i18n-ping.yml
+++ b/.github/workflows/discord-i18n-ping.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   translation:
     name: translation_tuesday
-    if: ${{ github.repository_owner == 'withastro' && github.event.commits[0].message != '[ci] format' }}
+    if: ${{ github.repository_owner == 'withastro' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
