--- a/.github/workflows/discord-i18n-ping.yml
+++ b/.github/workflows/discord-i18n-ping.yml
@@ -25,7 +25,7 @@ jobs:
       
       - name: Send a Discord notification
         env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_CONGRATS }}
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_I18N }}
         uses: Ilshidur/action-discord@0.3.2
         with:
           args: "${{ steps.message.outputs.DISCORD_MESSAGE }}"
