--- a/package.json
+++ b/package.json
@@ -104,10 +104,10 @@
     "sass": "^1.54.3"
   },
   "engines": {
-    "node": "^14.15.0 || >=16.0.0",
-    "pnpm": ">=7.0.0"
+    "node": ">=16.12.0",
+    "pnpm": ">=8.2.0"
   },
-  "packageManager": "pnpm@7.14.0",
+  "packageManager": "pnpm@8.2.0",
   "pnpm": {
     "peerDependencyRules": {
       "ignoreMissing": [
