Fix HTML entity encoding issue in copy button

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.7",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --port 8000",
     "start": "astro dev",
     "build": "astro build",
     "test": "vitest",
@@ -41,6 +41,7 @@
     "@types/canvas-confetti": "^1.6.0",
     "@types/chroma-js": "^2.1.4",
     "@types/hast": "^2.3.4",
+    "@types/he": "^1.2.0",
     "@types/html-escaper": "^3.0.0",
     "@types/mdast": "^3.0.10",
     "@types/node": "^18.6.4",
@@ -97,6 +98,7 @@
     "@fontsource/ibm-plex-mono": "^4.5.10",
     "@nanostores/preact": "^0.1.3",
     "canvas-confetti": "^1.6.0",
+    "he": "^1.2.0",
     "jsdoc-api": "^7.1.1",
     "nanostores": "^0.5.13",
     "rehype-autolink-headings": "^6.1.1",
