--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.7",
   "private": true,
   "scripts": {
-    "dev": "astro dev --port 8000",
+    "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "test": "vitest",
